sonarqube/06-deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarqube
  name: sonarqube-app
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonarqube
        image: #@ "{}/tools/sonarqube:8".format(data.values.common.harborDomain)
        resources:
          requests:
            memory: "1200Mi"
            cpu: .25
          limits:
            memory: "2500Mi"
            cpu: .75
        volumeMounts:
        - mountPath: "/opt/sonarqube/data/"
          name: data
        - mountPath: "/opt/sonarqube/extensions/"
          name: extensions
        ports:
        - containerPort: 9000
          protocol: TCP
      volumes:
      - name: data 
        persistentVolumeClaim:
          claimName: sonarqube-data
      - name: extensions
        persistentVolumeClaim:
          claimName: sonarqube-extensions
      - name: initcontainer-script
        configMap:
          defaultMode: 493
          name: sonarqube-es-initcontainer
